testsuite/tests/backpack/should_fail/bkpfail42.bkp
{-# LANGUAGE TypeFamilies #-}
unit p where
    signature A where
        type family F a where
            F a = Bool
unit q where
    dependency p[A=<A>]
    signature A where
        type family F a where
            F a = Int
