testsuite/tests/backpack/should_fail/bkpfail42.stderr
[1 of 2] Processing p
  [1 of 1] Compiling A[sig]           ( p/A.hsig, nothing )
[2 of 2] Processing q
  [1 of 1] Compiling A[sig]           ( q/A.hsig, nothing )

bkpfail42.bkp:9:9: error:
    • Type constructor ‘F’ has conflicting definitions in the module
      and its hsig file
      Main module: type F :: * -> *
                   type family F a where
                       F a = Int
      Hsig file:  type F :: * -> *
                  type family F a where
                      F a = Bool
    • while merging the signatures from:
        • p[A=<A>]:A
        • ...and the local signature for A
